# liftracc

./: .gitignore  README  index.html
benchmarks/: CMakeLists.txt
benchmarks/profiling/: plot.py
benchmarks/src/: linpack-cblas.c  linpack-liftracc.c  linpack-liftracc.sh  linpack-new-mod.c  linpack-testing.c
blas_libs/: get_all_libs.sh  get_atlas.sh  get_blas.sh  get_cblas.sh  get_goto2.sh
common/: README  cblas.xml  cblas2xml.py  cublas.h.patch  cublas.xml  cublas2xml.py  get_all_libs.sh  get_blas.sh  get_cblas.sh
common/boost_program_options/: CMakeLists.txt
common/cmake_modules/: FindATLAS.cmake  FindBLAS.cmake  FindCBLAS.cmake  FindClearspeed.cmake  FindGoto2.cmake  FindLIFTRACC.cmake  FindPin.cmake  UseLIFTRACC.cmake
common/patches/: blas.patch  cblas_complete.patch  cblas_makefile.patch  cblas_makefile_inner.patch  cblas_rename.patch  goto2.patch
common/stylesheets/: ctypes.xsl  helper_functions.xsl
testapps/: CMakeLists.txt
testapps/src/: interpose.sh  interpose_dlsym.sh  main.cpp  main_dlsym.cpp  proctrace.cpp  replace_fibrec.cpp  show_info.c  testlib.c  testlib.h  testlib_interposer.c  testlib_interposer.cpp
